Fix link descriptions and contrast based on lighthouse score

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,14 +441,14 @@ body {
 }
 
 .bio_block {
-    background: rgba(244, 128, 124, 0.25);
+    /* background: rgba(244, 128, 124, 0.50); */
     justify-content: center;
     border-radius: 0.5rem;
     box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
 }
 
 .bio_block_2 {
-    background: rgba(32, 44, 57, .50);
+    background: rgba(32, 44, 57, .75);
     justify-content: center;
     border-radius: 0.5rem;
     box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
